# ParsingPDFs

./: .coverage  .gitignore  README.md  config.example.yaml  download.py  pyproject.toml  requirements.txt
examples/: debug_figures.py  test_5_urls.py  test_pipeline.py  urls.txt
pdf_extraction/: __init__.py  __main__.py  config.py  default_config.yaml  pipeline.py
pdf_extraction/core/: __init__.py  classifier.py  extractor_text.py  extractor_vlm.py  figure_handler.py  merger.py  postprocessor.py  state.py
pdf_extraction/prompts/: figure_description.txt  ocr_text_only.txt  ocr_with_figures.txt
pdf_extraction/providers/: __init__.py  base.py  custom_provider.py  google_provider.py  ollama_provider.py  openai_compatible.py  openai_provider.py  vllm_provider.py
tests/: __init__.py  test_classifier.py  test_config.py  test_merger.py  test_postprocessor.py  test_state.py
