[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pdf-extraction"
version = "0.1.0"
description = "Universal PDF-to-Markdown extraction pipeline with VLM/OCR support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["pdf", "ocr", "vlm", "markdown", "extraction", "gemini", "gpt-4o"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "PyMuPDF>=1.24.0",
    "pymupdf4llm>=0.0.1",
    "PyYAML>=6.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
pdf-extraction = "pdf_extraction.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_extraction*"]

[tool.setuptools.package-data]
"pdf_extraction" = ["default_config.yaml", "prompts/*.txt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=pdf_extraction --cov-report=term-missing -v"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
